--- a/src/unsw/gloriaromanus/invasion_menu.fxml
+++ b/src/unsw/gloriaromanus/invasion_menu.fxml
@@ -1,47 +1,117 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Background?>
 <?import javafx.scene.layout.BackgroundFill?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.text.Font?>
 
-
-<VBox StackPane.alignment="TOP_LEFT" spacing="10" maxWidth="250" styleClass="panel-region" fx:controller="unsw.gloriaromanus.InvasionMenuController" xmlns:fx="http://javafx.com/fxml" stylesheets="/unsw/gloriaromanus/style.css">
+<VBox maxWidth="250" spacing="10" styleClass="panel-region" stylesheets="/unsw/gloriaromanus/style.css" StackPane.alignment="TOP_LEFT" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="unsw.gloriaromanus.InvasionMenuController">
     <padding>
-        <Insets topRightBottomLeft="10"/>
+        <Insets topRightBottomLeft="10" />
     </padding>
     <background>
         <Background>
             <fills>
                 <BackgroundFill>
                     <fill>
-                        <Color opacity="0.3"/>
+                        <Color opacity="0.3" />
                     </fill>
                 </BackgroundFill>
             </fills>
         </Background>
     </background>
+   <Label prefHeight="0.0" prefWidth="230.0" text="         !!!!!! ATTACK !!!!!!" textAlignment="CENTER" textFill="#ca00ff">
+      <font>
+         <Font name="Chalkboard SE Light" size="16.0" />
+      </font>
+   </Label>
     <HBox>
         <VBox>
-            <Label text="Your province"/>
-            <TextField fx:id="invading_province" text="" editable="false"/>
+            <Label text="Player 1 province">
+            <font>
+               <Font size="14.0" />
+            </font></Label>
+            <TextField fx:id="invading_province" editable="false" text="" />
+         <ComboBox fx:id="attackCombo1fxid" onAction="#attackCombo1" prefWidth="150.0" />
         </VBox>
         <VBox>
-            <Label text="Enemy province"/>
-            <TextField fx:id="opponent_province" text="" editable="false"/>
+            <Label text="Player 2 province">
+            <font>
+               <Font size="14.0" />
+            </font></Label>
+            <TextField fx:id="opponent_province" editable="false" text="" />
+         <ComboBox fx:id="attackCombo2fxid" onAction="#attackCombo2" prefWidth="150.0" />
         </VBox>
     </HBox>
-    <Button text="Invade" onAction="#clickedInvadeButton"/>
-    <VBox>
-        <Label text="Output from interactions"/>
-        <TextArea fx:id="output_terminal" text="" editable="false"/>
+   <HBox prefHeight="4.0" prefWidth="230.0">
+      <children>
+         <Button onAction="#clickedInvadeButton" text="Invade Player 2" />
+         <Label text="          " />
+          <Button onAction="#clickedInvadeButton2" text="Invade Player 1" />
+      </children>
+   </HBox>
+   <Label prefHeight="0.0" prefWidth="230.0" text="         ----- Move -----" textAlignment="CENTER" textFill="#ca00ff">
+      <font>
+         <Font name="Chalkboard SE Light" size="16.0" />
+      </font>
+   </Label>
+   <HBox prefHeight="31.0" prefWidth="230.0">
+      <children>
+         <VBox prefHeight="100.0" prefWidth="111.0">
+            <children>
+               <Label text=" Move Player 1 :">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+               </Label>
+               <ComboBox fx:id="movecombo1fxid" onAction="#moveCombo1" prefWidth="150.0" />
+            </children>
+         </VBox>
+         <VBox prefHeight="100.0" prefWidth="111.0">
+            <children>
+               <Label text=" Move Player 2 :">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+               </Label>
+               <ComboBox fx:id="movecombo2fxid" onAction="#moveCombo2" prefWidth="150.0" />
+            </children>
+         </VBox>
+      </children>
+   </HBox>
+   <HBox prefHeight="0.0" prefWidth="230.0">
+      <children>
+         <Button mnemonicParsing="false" onAction="#movep1" text="Move P1">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </Button>
+         <Label text="                               " />
+         <Button mnemonicParsing="false" onAction="#movep2" text="Move P2">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </Button>
+      </children>
+   </HBox>
+    <VBox prefHeight="123.0" prefWidth="230.0">
+        <Label text="Output from interactions" />
+        <TextArea fx:id="output_terminal" editable="false" prefHeight="158.0" prefWidth="230.0" text="" />
     </VBox>
-    <Button text="Switch Menus" onAction="#clickedSwitchMenu"/>
+   <HBox prefHeight="0.0" prefWidth="230.0">
+      <children>
+         <Button mnemonicParsing="false" onAction="#nextTurnButton" text="Next Turn!" />
+         <Label text="                      " />
+          <Button onAction="#clickedSwitchMenu" text="Switch Menus" />
+      </children>
+   </HBox>
 </VBox>
