--- a/src/unsw/gloriaromanus/basic_menu.fxml
+++ b/src/unsw/gloriaromanus/basic_menu.fxml
@@ -1,27 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Background?>
 <?import javafx.scene.layout.BackgroundFill?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.text.Font?>
 
-<VBox StackPane.alignment="TOP_LEFT" spacing="10" maxWidth="250" styleClass="panel-region" fx:controller="unsw.gloriaromanus.BasicMenuController" xmlns:fx="http://javafx.com/fxml" stylesheets="/unsw/gloriaromanus/style.css">
+<VBox maxWidth="403.0" prefHeight="514.0" prefWidth="403.0" spacing="10" styleClass="panel-region" stylesheets="/unsw/gloriaromanus/style.css" StackPane.alignment="TOP_LEFT" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unsw.gloriaromanus.BasicMenuController">
     <padding>
-        <Insets topRightBottomLeft="10"/>
+        <Insets topRightBottomLeft="10" />
     </padding>
     <background>
         <Background>
             <fills>
                 <BackgroundFill>
                     <fill>
-                        <Color opacity="0.3"/>
+                        <Color opacity="0.3" />
                     </fill>
                 </BackgroundFill>
             </fills>
         </Background>
     </background>
-    <Button text="Switch Menus" onAction="#clickedSwitchMenu"/>
+   <Label prefHeight="40.0" prefWidth="364.0" text="                   INFRASTRUCTURE" textAlignment="CENTER" textFill="#ca00ff">
+      <font>
+         <Font name="Chalkboard SE Light" size="16.0" />
+      </font>
+   </Label>
+   <HBox prefHeight="52.0" prefWidth="279.0">
+      <children>
+         <Label text="  BUY :    " />
+         <ChoiceBox fx:id="Infrabuymenu" prefWidth="150.0" />
+         <Button mnemonicParsing="false" onAction="#buyInfraButton" text="Confirm P1" />
+         <Button mnemonicParsing="false" onAction="#buyInfraButtonp2" text="Confirm P2" />
+      </children>
+   </HBox>
+   <HBox prefHeight="51.0" prefWidth="279.0">
+      <children>
+         <Label text="  UPGRADE:  " />
+         <ChoiceBox fx:id="infraupgrademenu" prefWidth="150.0" />
+         <Button mnemonicParsing="false" onAction="#upgradeInfraButton" text="Confirm P1" />
+         <Button mnemonicParsing="false" onAction="#upgradeInfraButtonp2" text="Confirm P2" />
+      </children>
+   </HBox>
+   <Label prefHeight="17.0" prefWidth="280.0" text="                    CREATE UNITS" textAlignment="CENTER" textFill="#bd1ddd">
+      <font>
+         <Font name="Chalkboard SE Light" size="16.0" />
+      </font>
+   </Label>
+   <HBox prefHeight="32.0" prefWidth="357.0">
+      <children>
+         <Label text="  ENTER UNIT NAME:       " />
+         <TextField fx:id="unitName" prefHeight="27.0" prefWidth="125.0" />
+      </children>
+   </HBox>
+   <HBox prefHeight="37.0" prefWidth="357.0">
+      <children>
+         <Label text="  UNIT TYPE:  " />
+         <ChoiceBox fx:id="unitTypeMenu" prefWidth="150.0" />
+         <Button mnemonicParsing="false" onAction="#createUnitButton" text="Confirm P1" />
+         <Button mnemonicParsing="false" onAction="#createUnitButtonp2" text="Confirm P2" />
+      </children>
+   </HBox>
+   <Label prefHeight="40.0" prefWidth="357.0" text="                     BUY TROOPS" textAlignment="CENTER" textFill="#bd1ddd">
+      <font>
+         <Font name="Chalkboard SE Light" size="16.0" />
+      </font>
+   </Label>
+   <HBox prefHeight="32.0" prefWidth="357.0">
+      <children>
+         <Label text="  QUANTITY:       " />
+         <TextField fx:id="troopqty" prefHeight="27.0" prefWidth="125.0" />
+      </children>
+   </HBox>
+   <HBox prefHeight="52.0" prefWidth="279.0">
+      <children>
+         <Label text="  BUY (Player 1 Units) :       " />
+         <ComboBox fx:id="trooptype" onAction="#TroopTypesInit" prefWidth="150.0" />
+         <Button mnemonicParsing="false" onAction="#buyTroopButton" text="Confirm P1" />
+      </children>
+   </HBox>
+   <HBox prefHeight="52.0" prefWidth="279.0">
+      <children>
+         <Label text="  BUY (Player 2 Units) :       " />
+         <ComboBox fx:id="trooptype1" onAction="#TroopTypesInit1" prefWidth="150.0" />
+         <Button mnemonicParsing="false" onAction="#buyTroopButtonp2" text="Confirm P2" />
+      </children>
+   </HBox>
+   <TextArea fx:id="out_terminal" prefHeight="200.0" prefWidth="200.0" />
+    <Button onAction="#clickedSwitchMenu" text="Switch Menus" />
 </VBox>
