--- a/src/unsw/gloriaromanus/invasion_menu.fxml
+++ b/src/unsw/gloriaromanus/invasion_menu.fxml
@@ -2,9 +2,9 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Background?>
@@ -48,12 +48,7 @@
                <Font size="14.0" />
             </font></Label>
             <TextField fx:id="invading_province" editable="false" text="" />
-         <MenuButton fx:id="attackCombo1fxid" mnemonicParsing="false" onAction="#attackCombo1" text="MenuButton">
-           <items>
-             <MenuItem mnemonicParsing="false" text="Action 1" />
-             <MenuItem mnemonicParsing="false" text="Action 2" />
-           </items>
-         </MenuButton>
+         <ListView fx:id="attackCombo1fxid" prefHeight="71.0" prefWidth="115.0" />
         </VBox>
         <VBox>
             <Label text="Player 2 province">
@@ -61,12 +56,7 @@
                <Font size="14.0" />
             </font></Label>
             <TextField fx:id="opponent_province" editable="false" text="" />
-         <MenuButton fx:id="attackCombo2fxid" mnemonicParsing="false" onAction="#attackCombo2" text="MenuButton">
-           <items>
-             <MenuItem mnemonicParsing="false" text="Action 1" />
-             <MenuItem mnemonicParsing="false" text="Action 2" />
-           </items>
-         </MenuButton>
+         <ListView fx:id="attackCombo2fxid" prefHeight="71.0" prefWidth="115.0" />
         </VBox>
     </HBox>
    <HBox prefHeight="4.0" prefWidth="230.0">
@@ -81,21 +71,17 @@
          <Font name="Chalkboard SE Light" size="16.0" />
       </font>
    </Label>
-   <HBox prefHeight="31.0" prefWidth="230.0">
+   <HBox prefHeight="149.0" prefWidth="230.0">
       <children>
-         <VBox prefHeight="100.0" prefWidth="111.0">
+         <VBox prefHeight="76.0" prefWidth="111.0">
             <children>
                <Label text=" Move Player 1 :">
                   <font>
                      <Font size="14.0" />
                   </font>
                </Label>
-               <MenuButton fx:id="movecombo1fxid" mnemonicParsing="false" onAction="#moveCombo1" text="MenuButton">
-                 <items>
-                   <MenuItem mnemonicParsing="false" text="Action 1" />
-                   <MenuItem mnemonicParsing="false" text="Action 2" />
-                 </items>
-               </MenuButton>
+               <ComboBox fx:id="movecombo1fxid" onAction="#moveCombo1" prefWidth="150.0" />
+               <ListView fx:id="moveUnitsel1" prefHeight="175.0" prefWidth="90.0" />
             </children>
          </VBox>
          <VBox prefHeight="100.0" prefWidth="111.0">
@@ -105,12 +91,8 @@
                      <Font size="14.0" />
                   </font>
                </Label>
-               <MenuButton fx:id="movecombo2fxid" mnemonicParsing="false" onAction="#moveCombo2" text="MenuButton">
-                 <items>
-                   <MenuItem mnemonicParsing="false" text="Action 1" />
-                   <MenuItem mnemonicParsing="false" text="Action 2" />
-                 </items>
-               </MenuButton>
+               <ComboBox fx:id="movecombo2fxid" onAction="#moveCombo2" prefWidth="150.0" />
+               <ListView fx:id="moveUnitsel12" prefHeight="175.0" prefWidth="90.0" />
             </children>
          </VBox>
       </children>
