--- a/src/unsw/gloriaromanus/TroopShop.fxml
+++ b/src/unsw/gloriaromanus/TroopShop.fxml
@@ -1,47 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.Background?>
+<?import javafx.scene.layout.BackgroundFill?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="376.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <Label prefHeight="40.0" prefWidth="357.0" text="                     BUY TROOPS" textAlignment="CENTER" textFill="#bd1ddd">
-         <font>
-            <Font name="Chalkboard SE Light" size="16.0" />
-         </font>
-      </Label>
-      <HBox prefHeight="32.0" prefWidth="357.0">
-         <children>
-            <Label text="  QUANTITY:       " />
-            <TextField fx:id="troopqty" prefHeight="27.0" prefWidth="125.0" />
-         </children>
-      </HBox>
-      <HBox prefHeight="52.0" prefWidth="279.0">
-         <children>
-            <Label text="  BUY (Player 1 Units) :       " />
-            <ComboBox fx:id="trooptype" onAction="#TroopTypesInit" prefWidth="150.0" promptText="choose unit" />
-            <Button mnemonicParsing="false" onAction="#buyTroopButton" text="Confirm P1" />
-         </children>
-      </HBox>
-      <HBox prefHeight="52.0" prefWidth="279.0">
-         <children>
-            <Label text="  BUY (Player 2 Units) :       " />
-            <ComboBox fx:id="trooptype1" onAction="#TroopTypesInit1" prefWidth="150.0" promptText="choose unit" />
-            <Button mnemonicParsing="false" onAction="#buyTroopButtonp2" text="Confirm P2" />
-         </children>
-      </HBox>
-      <TextArea fx:id="out_terminal1" prefHeight="105.0" prefWidth="209.0" />
-      <Pane prefHeight="39.0" prefWidth="376.0">
-         <children>
-            <Button layoutX="145.0" layoutY="6.0" mnemonicParsing="false" onAction="#exitTroopShop" text="Exit shop" />
-         </children>
-      </Pane>
-   </children>
+<VBox maxWidth="403.0" prefHeight="500.0" prefWidth="222.0" spacing="10" styleClass="panel-region" stylesheets="/unsw/gloriaromanus/style.css" StackPane.alignment="TOP_RIGHT" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unsw.gloriaromanus.TroopShopController">
+    <padding>
+        <Insets topRightBottomLeft="10" />
+    </padding>
+    <background>
+        <Background>
+            <fills>
+                <BackgroundFill>
+                    <fill>
+                        <Color opacity="0.3" />
+                    </fill>
+                </BackgroundFill>
+            </fills>
+        </Background>
+    </background>
+   <Label prefHeight="40.0" prefWidth="364.0" text="  INFRASTRUCTURE" textAlignment="CENTER" textFill="#ca00ff">
+      <font>
+         <Font name="Chalkboard SE Light" size="16.0" />
+      </font>
+   </Label>
+   <Label prefHeight="17.0" prefWidth="280.0" text=" CREATE UNITS" textAlignment="CENTER" textFill="#bd1ddd">
+      <font>
+         <Font name="Chalkboard SE Light" size="16.0" />
+      </font>
+   </Label>
+   <Label prefHeight="40.0" prefWidth="357.0" text=" BUY TROOPS" textAlignment="CENTER" textFill="#bd1ddd">
+      <font>
+         <Font name="Chalkboard SE Light" size="16.0" />
+      </font>
+   </Label>
+    <Button onAction="#TroopShopSwitch" text="Switch Menus" />
 </VBox>
