--- a/src/unsw/gloriaromanus/stats.fxml
+++ b/src/unsw/gloriaromanus/stats.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxWidth="261.0" prefHeight="404.0" prefWidth="261.0" spacing="10" styleClass="panel-region" stylesheets="/unsw/gloriaromanus/style.css" StackPane.alignment="TOP_RIGHT" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unsw.gloriaromanus.InvasionMenuController">
+<VBox maxWidth="261.0" prefHeight="404.0" prefWidth="261.0" spacing="10" styleClass="panel-region" stylesheets="/unsw/gloriaromanus/style.css" StackPane.alignment="TOP_RIGHT" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unsw.gloriaromanus.statsController">
     <padding>
         <Insets topRightBottomLeft="10" />
     </padding>
