--- a/src/unsw/gloriaromanus/stats.fxml
+++ b/src/unsw/gloriaromanus/stats.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.layout.Background?>
 <?import javafx.scene.layout.BackgroundFill?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
@@ -43,7 +44,53 @@
                   <Label fx:id="P1gold" text="                              " />
                </children>
             </HBox>
-            <HBox prefHeight="100.0" prefWidth="200.0" />
+            <HBox prefHeight="35.0" prefWidth="241.0">
+               <children>
+                  <Label text="WEALTH :   ">
+                     <font>
+                        <Font size="19.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="WEALTHBOX1" text="                       " />
+               </children></HBox>
+            <HBox prefHeight="60.0" prefWidth="241.0">
+               <children>
+                  <VBox prefHeight="72.0" prefWidth="115.0">
+                     <children>
+                        <Label text="NUMBER OF">
+                           <font>
+                              <Font size="19.0" />
+                           </font>
+                        </Label>
+                        <Label text="     OWNED">
+                           <font>
+                              <Font size="19.0" />
+                           </font>
+                        </Label>
+                        <Label text="PROVINCES">
+                           <font>
+                              <Font size="19.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="72.0" prefWidth="28.0">
+                     <children>
+                        <Label text="  " />
+                        <Label text="." />
+                        <Label text="." />
+                        <Label text="  " />
+                     </children>
+                  </VBox>
+                  <Pane prefHeight="72.0" prefWidth="93.0">
+                     <children>
+                        <Label fx:id="OWNEDPROVS1" layoutX="14.0" layoutY="28.0" text="         " />
+                        <Label layoutX="44.0" layoutY="28.0" prefHeight="17.0" prefWidth="6.0" text="/" />
+                        <Label layoutX="58.0" layoutY="28.0" text="53" />
+                     </children>
+                  </Pane>
+               </children>
+            </HBox>
          </children>
       </VBox>
       <Label prefHeight="27.0" prefWidth="244.0" text="                   PLAYER 2">
@@ -63,7 +110,54 @@
                   <Label fx:id="P2gold" text="                                       " />
                </children>
             </HBox>
-            <HBox prefHeight="100.0" prefWidth="200.0" />
+            <HBox prefHeight="35.0" prefWidth="241.0">
+               <children>
+                  <Label text="WEALTH :   ">
+                     <font>
+                        <Font size="19.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="WEALTHBOX2" text="                       " />
+               </children>
+            </HBox>
+            <HBox prefHeight="60.0" prefWidth="241.0">
+               <children>
+                  <VBox prefHeight="72.0" prefWidth="115.0">
+                     <children>
+                        <Label text="NUMBER OF">
+                           <font>
+                              <Font size="19.0" />
+                           </font>
+                        </Label>
+                        <Label text="     OWNED">
+                           <font>
+                              <Font size="19.0" />
+                           </font>
+                        </Label>
+                        <Label text="PROVINCES">
+                           <font>
+                              <Font size="19.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="72.0" prefWidth="28.0">
+                     <children>
+                        <Label text="  " />
+                        <Label text="." />
+                        <Label text="." />
+                        <Label text="  " />
+                     </children>
+                  </VBox>
+                  <Pane prefHeight="72.0" prefWidth="93.0">
+                     <children>
+                        <Label fx:id="OWNEDPROVS2" layoutX="14.0" layoutY="28.0" text="         " />
+                        <Label layoutX="44.0" layoutY="28.0" prefHeight="17.0" prefWidth="6.0" text="/" />
+                        <Label layoutX="58.0" layoutY="28.0" text="53" />
+                     </children>
+                  </Pane>
+               </children>
+            </HBox>
          </children>
       </VBox>
    </children>
